# fast-segformer

./: .gitignore  README.md  pyproject.toml  tox.ini
fast_segformer/: __init__.py  config.py  segformer.py  utils.py
tests/: test_forward.py
